[package]
name = "common"
version = "0.1.0"
license = "MIT"
description = "A library package for files commonly used in different projects"
readme = "../README.md"
repository = "https://github.com/ID-UNCLEAR/rlox"
edition.workspace = true
rust-version.workspace = true
include = [
    "src/**/*.rs"
]

[dependencies]
