[package]
name = "rlox_codegen"
version = "0.1.0"
license = "MIT"
description = "A library package for generating machine code."
readme = "../README.md"
repository = "https://github.com/ID-UNCLEAR/rlox"
edition.workspace = true
rust-version.workspace = true
include = [
    "src/**/*.rs"
]

[dependencies]
rlox_ast = { path = "../rlox_ast", version = "0.1.0" }
rlox_semantic = { path = "../rlox_semantic", version = "0.1.0" }
