[package]
name = "rlox_parser"
version = "0.1.0"
license = "MIT"
description = "A library package for parsing the source lox files."
readme = "../README.md"
repository = "https://github.com/ID-UNCLEAR/rlox"
edition.workspace = true
rust-version.workspace = true
include = [
    "src/**/*.rs"
]

[dependencies]
common = { path = "../common", version = "0.1.0" }
rlox_ast = { path = "../rlox_ast", version = "0.1.0" }
rlox_scanner = { path = "../rlox_scanner", version = "0.1.0" }
