[package]
name = "rlox_scanner"
version = "0.1.0"
license = "MIT"
description = "A library package for scanning and tokenizing the source lox files."
readme = "../README.md"
repository = "https://github.com/ID-UNCLEAR/rlox"
edition.workspace = true
rust-version.workspace = true
include = [
    "src/**/*.rs"
]

[dependencies]
common = { path = "../common", version = "0.1.0" }
