[package]
name = "rlox_semantic"
version = "0.1.0"
license = "MIT"
description = "A library package for type checking."
readme = "../README.md"
repository = "https://github.com/ID-UNCLEAR/rlox"
edition.workspace = true
rust-version.workspace = true
include = [
    "src/**/*.rs"
]

[dependencies]
rlox_ast = { path = "../rlox_ast", version = "0.1.0" }
rlox_parser = { path = "../rlox_parser", version = "0.1.0" }
